Added link for poster

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="jumbotron">
             <h3 class="text-center">Search any Movie</h3>
             <form id="searchForm">
-                <input type="text" class="form-control" id="searchText" placeholder="Enter movie...."/>
+                <input type="text" autocomplete="off" class="form-control" id="searchText" placeholder="Enter movie...."/>
                 <div class="form-group">
                     <button class="btn btn-danger btn-block" >Search</button>
                 </div>
