Added Search button

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container">
         <div class="jumbotron">
             <h3 class="text-center">Search any Movie</h3>
             <form id="searchForm">
                 <input type="text" autocomplete="off" class="form-control" id="searchText" placeholder="Enter movie...."/>
+                <button class="btn btn-primary" type="submit">Search</button>
             </form>
         </div>
     </div>
